WORK DONE ON NOV/27/2023

--- a/index_alt-interface_redux.html
+++ b/index_alt-interface_redux.html
@@ -4,6 +4,11 @@
 <head>
 
     <link rel="stylesheet" href="style_alt-interface_redux.css">
+    <link rel="stylesheet" href="style-foractionjs.css">
+
+    <script src="menutoggle.js"></script>
+    <script src="action.js"></script>
+
 
 </head>
 
@@ -11,45 +16,154 @@
 
 <!-- draggable elements -->
 
+<div id="dragfly">
+    <div id="dragflyheader">
+        <div id="fly">
+            <img src="images/fly-houseful-photograph leo edit.png">
+        </div>
+    </div>
+</div>
+
+
 <!-- sidebar, either beside or above content -->
 <header>
 
-<div>
-    <button><h1>tomorrow started</h1></button>
-    <button><h1>search</h1></button>
-</div>
+    <div>
+        <div>
+            <button>
+                <h1>tomorrow started</h1>
+            </button>
+        </div>
+        <div class="linksearch">
+            <button onclick="searchaltToggle()" title="search">
+                <h1>search</h1>
+            </button>
+        </div>
+    </div>
 
-<div style="height:3rem; border-style: solid; border-color: black;">
-</div>
+    <div class="search-container hide-scrollbar" id="searchalt">
 
-<div class="break"></div>
+        <div class="hide-scrollbar searchbar">
+        </div>
 
-<div class="masked-overflow-x">
-    <button><h1>shop</h1></button>
-    <button><h1>listen</h1></button>
-    <button><h1>categories</h1></button>
-    <button><h1>archives</h1></button>
-</div>
+        <div class="masked-overflow-x hide-scrollbar">
+            <div class="linkshop">
+                <button onclick="shopaltToggle()" title="shop" class="button">
+                    <h1>shop</h1>
+                </button>
+            </div>
+            <div class="linklistenup">
+                <button onclick="listenupaltToggle()" title="listenup">
+                    <h1>listen-up</h1>
+                </button>
+            </div>
 
-<div class="masked-overflow-x">
-    <a href="#">item item</a>
-    <a href="#">item item</a>
-    <a href="#">item item</a>
-    <a href="#">item item</a>
-    <a href="#">item item</a>
-    <a href="#">item item</a>
-    <a href="#">item item</a>
-</div> 
+            <div class="linkcategories">
+                <button onclick="categoriesaltToggle()" title="categories">
+                    <h1>categories</h1>
+                </button>
+            </div>
+            <div class="linkarchives">
+                <button onclick="archivesaltToggle()" title="archives">
+                    <h1>archives</h1>
+                </button>
+            </div>
+            <div>
+            <h1> <a href="randomizer.html" target="_blank"> randomizer </a> </h1>
+            </div>
+        </div>
+
+        <div id="shopalt" class="masked-overflow-x hide-scrollbar">
+            <a href="https://10corsocomo.com/en-us" target="_blank"><p>10 CORSO COMO</p></a>
+            <a href="https://247archives.online/" target="_blank"><p>247</p></a>
+            <a href="https://threeasfour.com/" target="_blank"><p>3 AS FOUR SHOP</p></a>
+            <a href="https://www.apc-us.com/" target="_blank"><p>A.P.C</p></a>
+            <a href="https://acrnm.com/" target="_blank"><p>ACRNM</p></a>
+            <a href="https://www.aimeleondore.com//" target="_blank"><p>AIM&Eacute; LEON DORE</p></a>
+            <a href="https://antonioli.eu/en-us" target="_blank"><p>ANTONIOLI</p></a>
+            <a href="https://apoc-store.com/" target="_blank"><p>APOC</p></a>
+            <a href="https://store.apolisglobal.com/" target="_blank"><p>APOLIS</p></a>
+            <a href="https://www.assemblynewyork.com//" target="_blank"><p>ASSEMBLY NEW YORK</p></a>
+            <a href="https://www.audiogon.com/" target="_blank"><p>AUDIOGON</p></a>
+            <a href="http://basicchannel.com/" target="_blank"><p>BASIC CHANNEL</p></a>
+            <a href="https://www.brooksengland.com/" target="_blank"><p>BROOKS ENGLAND</p></a>
+            <a href="https://www.byredo.com/us_en/" target="_blank"><p>BYREDO</p></a>
+            <a href="https://www.dashwoodbooks.com/" target="_blank"><p>DASHWOOD BOOKS</p></a>
+            <a href="https://www.etudes-studio.com/en-us#store" target="_blank"><p>&Eacute;TUDES STUDIO</p></a>
+            <a href="https://www.feitdirect.com/shop/" target="_blank"><p>FEIT</p></a>
+            <a href="https://www.fleetilya.com/" target="_blank"><p>FLEET ILYA</p></a>
+            <a href="https://www.gentlemonster.com/us/" target="_blank"><p>GENTLE MONSTER</p></a>
+            <a href="https://www.imperfectfoods.com/" target="_blank"><p>IMPERFECT FOODS</p></a>
+            <a href="https://www.jacquessoloviere.com/" target="_blank"><p>JACQUES SOLOVIERE</p></a>
+            <a href="https://www.jjjjound.com/" target="_blank"><p>JJJJOUND</p></a>
+            <a href="https://www.lelabofragrances.com/" target="_blank"><p>LE LABO</p></a>
+            <a href="https://maisonfabre.com/en/" target="_blank"><p>MAISON FABRE</p></a>
+        </div>
+
+        <div id="listenupalt" class="masked-overflow-x hide-scrollbar">
+            <a href="https://daily.bandcamp.com/" target="_blank"><p>BANDCAMP DAILY</p></a>
+            <a href="https://www.democracynow.org" target="_blank"><p>DEMOCRACY NOW</p></a>
+            <a href="https://everynoise.com//" target="_blank"><p>EVERY NOISE</p></a>
+            <a href="https://www.radiofrance.fr/franceculture" target="_blank"><p>FRANCE CULTURE</p></a>
+            <a href="https://www.nts.live/" target="_blank"><p>NTS</p></a>
+            <a href="https://somafm.com/" target="_blank"><p>SOMA.FM</p></a>
+            <a href="https://soundcloud.com" target="_blank"><p>SOUND CLOUD</p></a>
+            <a href="https://tyt.com/home" target="_blank"><p>THE YOUNG TURKS</p></a>
+        </div>
+
+        <div id="categoriesalt" class="masked-overflow-x hide-scrollbar">
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+            <a href="#"><p>ITEM CATEGORIES</p></a>
+        </div>
+
+        <div id="archivesalt" class="masked-overflow-x hide-scrollbar">
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+            <a href="#"><p>ITEM ARCHIVES</p></a>
+        </div>
+
+    </div>
 
 </header>
 
 <!-- content container -->
 <main>
-    
-<!-- content -->
-    <div class="content masked-overflow-y">
 
-        <h3>what is wrong with the palestinians?</h3>
+
+<!-- content -->
+    <div class="content masked-overflow-y hide-scrollbar">
+
+        <a href="z_post1.html"><h3>what is wrong with the palestinians?</h3></a>
+        <img src="images/z_article 1/settlements-in-westbank-gaza-palestine-1536x972.png" alt="">
+
+        <br>
+
+        <p style="text-align: center;"><em>a pretty IDF soldier checks our reporter</em></p>
+
+        <p>a deeply personal documentary, dena spends a day in hebron retracing the footsteps of her father, who was born and raised in hebron. </span></span>our reporter is given a tour by a kind hearted Israeli IDF ex-soldier. it is a look at life before october 7th massacres in the palestinian west bank territories which was and is not controlled by hamas</p>
+
+        <iframe title="YouTube video player" src="https://www.youtube.com/embed/aEdGcej-6D0?si=jqG2pYnsRHoD3efu" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+
+        <p>while these stories of human suffering can be heart breaking, i hope you can see there are good and righteous people everywhere including the IDF which you may believe to be harsh as they defend their country. there are also so many israeli's who have stood up against the collateral damage that is the killing of innocent woman and children and do not support netanyahu. as long as there is hate and bigotry on either side there will be no peace and both governments are guilty of not delivering that to the good people of each side.</p>
+
+        <iframe title="YouTube video player" src="https://www.youtube.com/embed/6foH3Zc82ZQ?si=tITBmtrvFWsAtK_Z" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+
+         <br>
+
+        <p style="text-align: center;"><em>finally this can not be watched without a bit of history on how this country came to be and why.<a href="https://www.youtube.com/watch?v=6foH3Zc82ZQ" target="_blank" rel="noopener">"how israel was created"</a></em></p>
+
+        <p>please educate yourselves by reading and watching multiple sides of the same story and judge for yourself. everything is biased, some are more biased than others. I find these to be factual and fair, but that is me.<br><br>if you watch this and you feel hatred in you, you are falling for the trap that is set for us all. understand your world and know that no one people can be all bad or good. there are good people and bad people in every country and culture. if this makes you hate all jews know that you have succumbed to oldest of racist means. you can condemn an act of a government or a group but to assign that guilt to their family and neighborhood and all such people is what we all must condemn. <strong class="initials">by xy</strong> </p>
+
+        <a href="z_post1.html"><h3>what is wrong with the palestinians?</h3></a>
         <img src="images/z_article 1/settlements-in-westbank-gaza-palestine-1536x972.png" alt="">
 
         <br>
@@ -73,6 +187,7 @@
     </div>
 
 </main>
+
 
 </body>
 
