--- a/landingpage_alt-interface.html
+++ b/landingpage_alt-interface.html
@@ -3,18 +3,18 @@
 
 <head>
 
-    <link rel="stylesheet" href="style_alt-interface_redux.css">
-    <link rel="stylesheet" href="style-foractionjs.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="menutoggle.js"></script>
-    <script src="action.js"></script>
-
+    <link rel="stylesheet" href="style_alt-interface.css">
+    <link rel="stylesheet" href="style-foraction_alt-interfacejs.css">
 
 </head>
 
 <body>
     
-    <a href="index_alt-interface_redux.html" id="landing">
+    <a href="index_alt-interface.html" id="landing">
             <img src="images/andre kertesz distortion 1 TS.jpg" alt="">
             <h1>enter tomorrow started</h1>
     </a>
