WORK DONE ON NOV/29/2023

--- a/landingpage.html
+++ b/landingpage.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-foractionjs.css">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style-foractionjs.css">
     
-    <script src="menutoggle.js"></script>
-    <script src="action.js"></script>
+    <script src="JS/menutoggle.js"></script>
+    <script src="JS/action.js"></script>
+    
 </head>
 
 <body>
@@ -13,13 +19,15 @@
 <!-- this is a draggable element.-->
 <div id="dragfly">
     <div id="dragflyheader">
-            <img onclick="flyToggle()" title="fly"id="fly" src="images/fly-houseful-photograph leo edit.png">
+        <div id="fly">
+            <img src="images/fly-houseful-photograph leo edit.png">
+        </div>
     </div>
 </div>
 
 <a href="index.html" id="landing">
         <img src="images/andre kertesz distortion 1 TS.jpg" alt="">
-        <h3>enter tomorrow started</h3>
+        <h1>enter tomorrow started</h1>
 </a>
 
 </body>
