--- a/randomizer.html
+++ b/randomizer.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-singlepost.css">
-    <link rel="stylesheet" href="style-foractionjs.css">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style-singlepost.css">
+    <link rel="stylesheet" href="CSS/style-foractionjs.css">
     
-    <script src="menutoggle.js"></script>
-    <script src="action.js"></script>
+    <script src="JS/menutoggle.js"></script>
+    <script src="JS/action.js"></script>
+    
 </head>
 
 <body>
@@ -18,11 +24,13 @@
         <a href="#"><img src="images/icons/email icon - black.png"></a>
     </div>
 
-<div id="post_title">
-    <h1>what is wrong with the palestinians?</h1>
-</div>
+    <div style="display: block; position:absolute; top:4vh; left:3vw; z-index:1;">
+        <p><a href="randomizer.html">to another random post</a></p>
+    </div>
 
-<a href="randomizer.html" style="position:absolute; top:4vh; left:3vw; z-index:1;">to another random post</a>
+<div id="post_title">
+    <h3>what is wrong with the palestinians?</h3>
+</div>
 
 <div class="post masked-overflow">
 <div class="post_content">
