--- a/z_post1.html
+++ b/z_post1.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-singlepost.css">
-    <link rel="stylesheet" href="style-foractionjs.css">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style-singlepost.css">
+    <link rel="stylesheet" href="CSS/style-foractionjs.css">
     
-    <script src="menutoggle.js"></script>
-    <script src="action.js"></script>
+    <script src="JS/menutoggle.js"></script>
+    <script src="JS/action.js"></script>
+
 </head>
 
 <body>
@@ -19,9 +25,8 @@
     </div>
 
 <div id="post_title">
-    <h1>what is wrong with the palestinians?</h1>
+    <h3>what is wrong with the palestinians?</h3>
 </div>
-
 
 <div class="post masked-overflow">
 <div class="post_content">
