WORK DONE UP TO DEC/8/2023

--- a/index_alt-interface.html
+++ b/index_alt-interface.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="CSS/style_alt-interface.css">
     <link rel="stylesheet" href="CSS/style-foraction_alt-interfacejs.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
     <script src="JS/menutoggle.js"></script>
     <script src="JS/action_alt-interface.js"></script>
 
@@ -79,57 +83,59 @@
 
     <div>
         <div class="linkcastalt menu-button">
+            <h1><a href="index_alt-interface.html" style="color: black; font-style: normal;">tomorrow started</a></h1   >
+        </div>
+
+        <div class="linkcastalt menu-button">
             <button onclick="castaltToggle()">
-                <h1>tomorrow started</h1>
+                <h1>about us</h1>
             </button>
+        </div>
+        <div>
+            <h1> <a href="randomizer.html" target="_blank"> randomizer </a> </h1>
         </div>
         <div class="linksearchalt menu-button">
             <button onclick="searchaltToggle()">
-                <h1>search</h1>
+                <h1>menu</h1>
             </button>
         </div>
+
+
     </div>
 
     <div class="search-container hide-scrollbar" id="searchalt">
-
         <div class="hide-scrollbar searchbar"></div>
-
         <div class="masked-overflow-x hide-scrollbar">
 
-            <div class="linkshopalt menu-button">
-                <button onclick="shopaltToggle()">
-                    <h1>shop</h1>
-                </button>
-            </div>
-
-            <div class="linklistenupalt menu-button">
-                <button onclick="listenupaltToggle()">
-                    <h1>listen-up</h1>
-                </button>
-            </div>
-
-            <div class="linkreferencealt menu-button">
-                <button onclick="referencealtToggle()">
-                    <h1>reference</h1>
-                </button>
-            </div>
-
+        <div>
             <div class="linkcategoriesalt menu-button">
                 <button onclick="categoriesaltToggle()">
                     <h1>categories</h1>
                 </button>
             </div>
-
+        </div>
+        <div>
             <div class="linkarchivesalt menu-button">
                 <button onclick="archivesaltToggle()">
                     <h1>archives</h1>
                 </button>
             </div>
-
-            <div>
-                <h1> <a href="randomizer.html" target="_blank"> randomizer </a> </h1>
+        </div>
+            <!--<div class="linkshopalt menu-button">
+                <button onclick="shopaltToggle()">
+                    <h1>shop</h1>
+                </button>
             </div>
-
+            <div class="linklistenupalt menu-button">
+                <button onclick="listenupaltToggle()">
+                    <h1>listen-up</h1>
+                </button>
+            </div>
+            <div class="linkreferencealt menu-button">
+                <button onclick="referencealtToggle()">
+                    <h1>reference</h1>
+                </button>
+            </div> -->
         </div>
 
         <div id="shopalt" class="masked-overflow-x hide-scrollbar">
