WORK DONE ON DEC/12/2023

--- a/html individual posts/z_post2.html
+++ b/html individual posts/z_post2.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
 <!--  <link rel="stylesheet" href="CSS/style.css">  -->
-    <link rel="stylesheet" href="CSS/style-singlepost.css">
-    <link rel="stylesheet" href="CSS/style-foractionjs.css">
+    <link rel="stylesheet" href="../CSS/style-singlepost.css">
+    <link rel="stylesheet" href="../CSS/style-foraction_showcasejs.css">
     
-    <script src="JS/menutoggle.js"></script>
-    <script src="JS/action.js"></script>
+    <script src="../JS/menutoggle.js"></script>
+    <script src="../JS/action_showcase.js"></script>
 
 </head>
 
