--- a/html wordpress/landingpage_wordpress.html
+++ b/html wordpress/landingpage_wordpress.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="CSS/style_alt-interface.css">
-    <link rel="stylesheet" href="CSS/style-foraction_alt-interfacejs.css">
+    <link rel="stylesheet" href="../CSS/style_wordpress.css">
+    <link rel="stylesheet" href="../CSS/style-foraction_wordpressjs.css">
 
-    <script src="JS/action_alt-interface.js"></script>
+    <script src="../JS/action_wordpress.js"></script>
 
 </head>
 
@@ -20,13 +20,13 @@
 <div id="dragfly">
     <div id="dragflyheader">
         <div id="fly">
-            <img src="images/fly-houseful-photograph leo edit.png">
+            <img src="../images/fly-houseful-photograph leo edit.png">
         </div>
     </div>
 </div>
 
-<a href="index_alt-interface.html" id="landing">
-        <img src="images/andre kertesz distortion 1 TS.jpg" alt="">
+<a href="../html wordpress/index_wordpress.html" id="landing">
+        <img src="../images/andre kertesz distortion 1 TS.jpg" alt="">
         <h1>enter tomorrow started</h1>
 </a>
     
