--- a/html showcase/landingpage_showcase.html
+++ b/html showcase/landingpage_showcase.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/style-foractionjs.css">
-    <link rel="stylesheet" href="CSS/style-forbackgroundoutlines.css">
+    <link rel="stylesheet" href="../CSS/style_showcase.css">
+    <link rel="stylesheet" href="../CSS/style-foraction_showcasejs.css">
+    <link rel="stylesheet" href="../CSS/style-forbackgroundoutlines.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
     
-    <script src="JS/menutoggle.js"></script>
-    <script src="JS/action.js"></script>
+    <script src="../JS/action_showcase.js"></script>
+    <script src="../JS/menutoggle.js"></script>
+
     
 </head>
 
@@ -54,7 +55,7 @@
 
     <div style="display: flex; justify-content: flex-end; gap: 2rem; ">
         <div style="text-align: right;">
-            <h1><a href="index.html" style="color: black; font-style: normal;">tomorrow started</a></h1>
+            <h1><a href="index_showcase.html" style="color: black; font-style: normal;">tomorrow started</a></h1>
         </div>
     </div>
 </header>
