WORK DONE ON DEC/13/2023

--- a/html_showcase/index_showcase.html
+++ b/html_showcase/index_showcase.html
@@ -49,8 +49,8 @@
     <!-- window - about us -->
         <div class="outline-description" id="description_randomizer">randomizer window</div>
         <div class="outline-dashed" id="outline_randomizer"></div>
-    <!-- fly -->
-    <div class="outline-dashed" id="outline_fly"></div>
+    <!-- spider -->
+    <div class="outline-dashed" id="outline_spider"></div>
 
 </div>
 
@@ -77,6 +77,17 @@
 
     </form>
 
+</div>
+
+<!-- this is a draggable element -->
+<!-- daily track feature - spider -->
+<div id="dragspider">
+    <div id="dragspiderheader">
+        <div id="spider-container">
+        <div id="spider">
+        </div>
+        </div>
+    </div>
 </div>
 
 <!-- this is a draggable element -->
@@ -210,10 +221,10 @@
         <button onclick="categoriesToggle()" title="categories"><h4 class="linkcategories">categories</h4></button>
         <div class="pane hide-scrollbar masked-overflow">
             <div>
-                <iframe src="../html individual posts/z_post1.html" scrolling="no" class="hide-scrollbar" title="post 1"></iframe>
+                <iframe src="../html_individual_posts/z_post1.html" scrolling="no" class="hide-scrollbar" title="post 1"></iframe>
             </div>
             <div>
-                <iframe src="../html individual posts/z_post2.html" scrolling="no" class="hide-scrollbar" title="post 2" ></iframe>
+                <iframe src="../html_individual_posts/z_post2.html" scrolling="no" class="hide-scrollbar" title="post 2" ></iframe>
             </div>
         </div>
 
@@ -314,7 +325,7 @@
     <div class="window" id="randomizer">
         <div class="container">
         <div class="pane hide-scrollbar masked-overflow">
-            <h3><a href="../html individual posts/z_post1.html" target="_blank">what is wrong with the palestinians?</a></h3>
+            <h3><a href="../html_individual_posts/z_post1.html" target="_blank">what is wrong with the palestinians?</a></h3>
             <img src="../images/z_article 1/settlements-in-westbank-gaza-palestine-1536x972.png" alt="">
             <p style="text-align: center;"> <em>a pretty IDF soldier checks our reporter</em> </p>
             <p>a deeply personal documentary, dena spends a day in hebron retracing the footsteps of her father, who was born and raised in hebron. </span></span>our reporter is given a tour by a kind hearted Israeli IDF ex-soldier. it is a look at life before october 7th massacres in the palestinian west bank territories which was and is not controlled by hamas</p>
@@ -350,16 +361,7 @@
 </div>
 </div>
 
-<!-- this is a draggable element -->
-<!-- daily track feature - FLY -->
-<div id="dragfly">
-    <div id="dragflyheader">
-        <div id="fly-container">
-        <div id="fly">
-        </div>
-        </div>
-    </div>
-</div>
+
 
 <script>
 
