--- a/html_wordpress/landingpage_wordpress.html
+++ b/html_wordpress/landingpage_wordpress.html
@@ -16,16 +16,18 @@
 
 <body>
     
-<!-- this is a draggable element.-->
-<div id="dragfly">
-    <div id="dragflyheader">
-        <div id="fly">
-            <img src="../images/fly-houseful-photograph leo edit.png">
+<!-- this is a draggable element -->
+<!-- daily track feature - spider -->
+<div id="dragspider">
+    <div id="dragspiderheader">
+        <div id="spider-container">
+        <div id="spider">
+        </div>
         </div>
     </div>
 </div>
 
-<a href="../html wordpress/index_wordpress.html" id="landing">
+<a href="../html_wordpress/index_wordpress.html" id="landing">
         <img src="../images/andre kertesz distortion 1 TS.jpg" alt="">
         <h1>enter tomorrow started</h1>
 </a>
