WORK DONE ON DEC/14/2023 2

--- a/html_wordpress/index_wordpress.html
+++ b/html_wordpress/index_wordpress.html
@@ -82,6 +82,33 @@
 <!-- header above content -->
 <header>
 
+    <div class="nav_bar">
+
+        <div>
+            <h1>tomorrow started</h1>
+        </div>
+
+        <div>
+            <h1>about us</h1>
+            <h1>randomizer</h1>
+            <h1>menu</h1>
+        </div>
+
+    </div>
+
+    <div class="dropdown">
+
+        <div>
+            <!-- search bar -->
+        </div>
+
+        <div>
+            <h1>categories</h1>
+            <h1>
+        </div>
+
+    </div>
+
     <div>
         <div class="linkcastalt menu-button">
             <h1><a href="../html_wordpress/index_wordpress.html" style="color: black; font-style: normal;">tomorrow started</a></h1   >
@@ -108,21 +135,17 @@
         <div class="hide-scrollbar searchbar"></div>
         <div class="masked-overflow-x hide-scrollbar">
 
-        <div>
             <div class="linkcategoriesalt menu-button">
                 <button onclick="categoriesaltToggle()">
                     <h1>categories</h1>
                 </button>
-            </div>
-        </div>
-        <div>
+            </div>  
             <div class="linkarchivesalt menu-button">
                 <button onclick="archivesaltToggle()">
                     <h1>archives</h1>
                 </button>
             </div>
-        </div>
-            <!--<div class="linkshopalt menu-button">
+            <div class="linkshopalt menu-button">
                 <button onclick="shopaltToggle()">
                     <h1>shop</h1>
                 </button>
@@ -136,7 +159,7 @@
                 <button onclick="referencealtToggle()">
                     <h1>reference</h1>
                 </button>
-            </div> -->
+            </div>
         </div>
 
         <div id="shopalt" class="masked-overflow-x hide-scrollbar">
